--- a/public/tuiter/explore.css
+++ b/public/tuiter/explore.css
@@ -1,4 +1,4 @@
-.rounded-corners-all-around {
+.wd-rounded-corners-all-around {
   border-radius: 20px;
   background-color: darkgray;
   color: white;
@@ -6,38 +6,45 @@
   border: 1px darkgray;
 }
 
-.relative-right {
+.wd-solid-border {
   position: relative;
   left: 16px;
+  border: 1px solid #2f3336;
+  width: 560px;
+  height: 95px;
 }
 
-.border-bottom {
-  border-bottom: #1da1f2 solid;
-  color: #1da1f2;
+.wd-gear-icon {
+  float: right;
+  position: relative;
+  right: 12px;
+  top: 6px;
+}
+
+.wd-relative-right {
+  position: relative;
+  left: 16px;
+  top: 5px;
+}
+
+.wd-border-bottom {
+  border-bottom: rgb(29,161,242) solid;
+  color: rgb(29,161,242);
   padding: 16px 0px;
   margin: 0px 16px;
 }
 
-.fg-color-darkgray {
-  color: #767d6e;
-  font-size: 13px;
-}
-
-.fg-color-white {
+.wd-fg-color-white {
   color: white;
 }
 
-.white-16 {
+
+.wd-white-13 {
   color: white;
   font-size: 13px;
 }
 
-.white-13 {
-  color: white;
-  font-size: 13px;
-}
-
-li.float {
+li.wd-float {
   float: left;
 }
 
@@ -52,61 +59,53 @@ li a {
   position: relative;
   left: 0px;
   display: inline-block;
-  color: #767d6e;
+  color: rgb(125, 110, 118);
   text-align: center;
   padding: 16px;
   text-decoration: none;
   font-size: 15px;
 }
 
-.solid-border {
-  position: relative;
-  left: 16px;
-  border: 1px solid #2f3336;
-  width: 560px;
-  height: 95px;
-}
-
-ul.no-bullets {
+ul.wd-no-bullets {
   list-style-type: none;
   position: relative;
   left: 16px;
   margin: 0;
   padding: 0;
   font-size: 13px;
-  color: #767d6e;
+  color: rgb(125, 110, 118);
 }
 
-.solid-border2 {
+.wd-solid-border2 {
   border: 1px solid #2f3336;
   width: 560px;
   height: 70px;
 }
 
-.solid-border3 {
+.wd-solid-border3 {
   border: 1px solid #2f3336;
   width: 560px;
   height: 122px;
 }
 
-.solid-border4 {
+.wd-solid-border4 {
   border: 1px solid #2f3336;
   width: 560px;
   height: 127px;
 }
 
-.position-right {
+.wd-position-right {
   position: relative;
   left: 16px;
   top: 10px;
 }
 
-.border-2-font {
+.wd-border-2-font {
   font-size: 13px;
   color: #767d6e;
 }
 
-.img1 {
+.wd-img1 {
   float: right;
   position: relative;
   right: 16px;
@@ -114,7 +113,7 @@ ul.no-bullets {
   border-radius: 20px;
 }
 
-.img2 {
+.wd-img2 {
   float: right;
   position: relative;
   right: 16px;
@@ -122,14 +121,8 @@ ul.no-bullets {
   border-radius: 20px;
 }
 
-.img0 {
-  float: right;
-  position: relative;
-  right: 12px;
-  top: 3px;
-}
 
-mark.gray {
+mark.wd-gray {
   font-size: 13px;
   color: #767d6e;
   background: none;
@@ -140,7 +133,7 @@ mark.gray {
   top: 2px;
 }
 
-.solid-border-beginning {
+.wd-solid-border-beginning {
   border: 1px solid #2f3336;
   width: 560px;
   height: 5px;
