--- a/public/tuiter/bookmarks.css
+++ b/public/tuiter/bookmarks.css
@@ -1,11 +1,3 @@
-.rounded-corners-all-around {
-  border-radius: 20px;
-  background-color: darkgray;
-  color: white;
-  height: 30px;
-  border: 1px darkgray;
-}
-
 .border-bottom {
   border-bottom: #1da1f2 solid;
   color: #1da1f2;
@@ -13,12 +5,13 @@
   margin: 0px 16px;
 }
 
-.fg-color-white {
+.wd-fg-color-white {
   color: white;
 }
 
-li.float {
-  padding-left:20px;
+li.wd-float {
+  padding-left: 20px;
+  float: left;
 }
 
 ul {
@@ -28,63 +21,47 @@ ul {
   background: black;
 }
 
-li a {
-  position: relative;
-  display: inline-block;
-  color: white;
-  text-align: center;
-  padding: 16px;
-  text-decoration: none;
-}
-
-ul.no-bullets {
+ul.wd-no-bullets {
   list-style-type: none;
   position: relative;
   left: 16px;
   top: 25px;
   margin: 0;
   padding: 0;
-  
 }
 
-.solid-border4 {
-  border: 1px solid #2f3336;
-  width: 590px;
+.wd-solid-border1 {
+  border: 1px solid rgb(47, 51, 54);
+  border-bottom: none;
+  width: 592px;
   height: 65px;
 }
 
-.position-right {
+.wd-position-right {
   position: relative;
   left: 16px;
   top: 12px;
 }
 
-.border-2-font {
-  font-size: 13px;
-  color: #767d6e;
+.wd-position-right-handle {
+  position: relative;
+  left: 16px;
+  top: 12px;
 }
 
-
-mark.white {
+mark.wd-white {
   font-size: 20px;
   color: white;
   background: none;
 }
 
-mark.lightgray {
+mark.wd-lightgray {
   font-size: 13px;
-  color: gray;
+  color: lightgray;
   background: none;
 }
 
-.img-center {
-  position: relative;
-  top: 2px;
-}
-
-
-
-.img-avatar {
+.wd-img-avatar {
   position: relative;
   left: 16px;
   top: 12px;
@@ -92,54 +69,41 @@ mark.lightgray {
   height: 48px;
   border-radius: 50%;
   vertical-align: middle;
-  
 }
 
-.right-text {
-  text-align: right;
-  display: inline-block;
-  position: relative;
-  left: 24px;
-}
-
-.bottom-text {
-  text-align: right;
-  position: relative;
-  left:75px;
-  top: -18px;
-  display: inline-block;
-  right:16px;
-}
-
-mark.white-author-name {
+mark.wd-white-author-name {
   font-size: 15px;
   color: white;
   background: none;
 }
 
-mark.gray-handle-name {
+mark.wd-gray-handle-name {
   font-size: 15px;
   color: lightgray;
   background: none;
 }
 
-.first-txt {
+.wd-first-txt {
   position: absolute;
   top: 12px;
   left: 76px;
+  /* 16+48+12 = 76 */
 }
 
-.second-txt {
+.wd-second-txt {
   float: right;
   position: absolute;
-  right: -8px;
+  left: 76px;
+  /* 16+48+12 = 76 */
   width: 506px;
   margin-top: 32px;
   margin-right: 16px;
+  /* 16px from right border */
+  margin-bottom: 12px;
   word-wrap: break-word;
 }
 
-.title-txt {
+.wd-title-txt {
   float: left;
   position: relative;
   right: 0px;
@@ -152,7 +116,7 @@ mark.gray-handle-name {
   width: 506px;
 }
 
-.third-txt {
+.wd-third-txt {
   float: left;
   position: relative;
   right: 0px;
@@ -165,7 +129,7 @@ mark.gray-handle-name {
   width: 506px;
 }
 
-.img-avatar {
+.wd-img-avatar {
   position: relative;
   left: 16px;
   top: 12px;
@@ -173,66 +137,64 @@ mark.gray-handle-name {
   height: 48px;
   border-radius: 50%;
   vertical-align: middle;
-
 }
 
-mark.white-author-name {
+mark.wd-white-author-name {
   font-size: 15px;
   color: white;
   background: none;
 }
 
-mark.gray-handle-name {
+mark.wd-gray-handle-name {
   font-size: 15px;
-  color: gray;
+  color: lightgray;
   background: none;
 }
 
-.solid-border3 {
-  border: 1px solid #2f3336;
-  width: 590px;
+.wd-solid-border2 {
+  border: 1px solid rgb(47, 51, 54);
+  width: 592px;
   height: 550px;
   position: relative;
   left: 16px;
   top: 25px;
 }
 
-
-
-.img-round {
+.wd-img-round {
   border-radius: 20px 20px 0px 0px;
   width: 504px;
   height: 264px;
+  border: 1px solid lightgray;
 }
 
-.img-round-pos {
+.wd-img-round-pos {
   position: absolute;
   top: 98px;
+  /* 86+12 */
   left: 76px;
+  /* 16+48+12 = 76 */
 }
 
-.round-border {
-  border: 1px solid #2f3336;
-  width: 503px;
+.wd-round-border {
+  border: 1px solid lightgray;
+  width: 504px;
   height: 85px;
   border-radius: 0 0 10px 10px;
   position: absolute;
+  border-top: none;
   top: 362px;
   left: 76px;
+  /* 16+48+12 = 76 */
 }
 
-li.float {
-  float: left;
-}
-
-.icons-pos{
+.wd-icons-pos {
   position: absolute;
   left: 0px;
   top: 98px;
   /* 86+12 */
 }
 
-li a{
+li a {
   position: relative;
   display: inline-block;
   color: #767d6e;
@@ -245,20 +207,20 @@ li a{
   top: 0px;
 }
 
-.li-icon{
+.wd-li-icon {
   position: relative;
   display: inline-block;
-  color: #767d6e;
+  color: lightgray;
   text-align: left;
   margin-left: 0px;
   text-decoration: none;
   font-size: 15px;
 }
 
-.li-beginning{
+.wd-li-beginning {
   position: relative;
   display: inline-block;
-  color: #767d6e;
+  color: lightgray;
   text-align: left;
   padding: 0px;
   margin-right: 0px;
@@ -268,7 +230,12 @@ li a{
   top: 0px;
 }
 
-.li-number-pos{
+.wd-li-number-pos {
   position: relative;
   right: 12px;
+}
+
+.wd-number-red{
+  color: red;
+  font: 15px;
 }
