--- a/public/labs/a4/challenge/explore.css
+++ b/public/labs/a4/challenge/explore.css
@@ -256,3 +256,9 @@ mark.wd-gray {
   background-color: white;
   border-color: white;
 }
+
+@media (min-width: 992px) {
+  .wd-ps-col3 {
+    padding-right: 1rem;
+  }
+}
