--- a/public/tuiter/HomeScreen/home.css
+++ b/public/tuiter/HomeScreen/home.css
@@ -70,7 +70,7 @@
 
 .wd-lightgray {
   border-radius: 0px 0px 20px 20px;
-  border: 1px solid gray;
+  border: 1px solid gray;  
 }
 
 @media (min-width: 1400px) {
@@ -79,4 +79,18 @@
     word-wrap: break-word;
     width: 550px;
   }
+}
+
+.wd-list-group-item:first-child {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.wd-img-size {
+  margin-left: -1px;
+  margin-right: -1px;
+  margin-bottom: -1px;
+  padding: 0 !important;
 }
