--- a/src/components/Tuiter/explore.css
+++ b/src/components/Tuiter/explore.css
@@ -119,7 +119,7 @@ mark.wd-gray {
   }
 }
 
-.wd-img-size {
+.wd-img-size-starship {
   margin-left: -24px;
   margin-right: -24px;
 }
@@ -206,6 +206,12 @@ mark.wd-gray {
 @media (min-width: 992px) {
   .wd-ps-col3 {
     padding-right: 1.1rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .wd-ps-col3-home {
+    padding-left: 1.5rem;
   }
 }
 
